# colpali-embedding2tag

./: .gitignore
workspace/: pyproject.toml  requirements.txt  run_rvlcdip.py
